styles.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Didact Gothic", sans-serif;
}

body {
    background: #F4F3F3;
    width: 100%;
    height: 100%;
}

.main__header {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    align-items: center;
    padding-top: 20px;
    padding-bottom: 20px;
    border-bottom: 5px solid black;
    background: white;
    z-index: 1000;
    position: fixed;
    min-width: 100%;
    top: 0;
}

.header__logo {
    grid-column: 3;
    text-align: center;
}

.header__logo a{
    font-size: 40px;
    text-decoration: none;
    color: black;
    font-weight: lighter;
}

.header__links {
    grid-column: 5;
    justify-self: center;
}

.header__links a {
    color: black;
    text-decoration: none;
    font-size: 20px;
    font-weight: lighter;
}

.header__links a:hover {
    text-decoration: underline;
}

.hero {
    display: flex;
    justify-content: center;
    margin-top: 110px;
    height: 400px;
}

img.hero__img {
    width: 100%;
}

.hero__action {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 400;
    margin-top: 200px;
    max-width: 75vw;
    height: 150px;
    font-size: 72px;
    background: rgba(101, 131, 157, 0.50);
    text-decoration: none;
    color: white;
    font-weight: lighter;
    padding-left: 80px;
    padding-right: 80px;
}

.hero__action:hover {
    background: rgba(101, 131, 157, 0.75);
}

.card__model {
    display: flex;
    margin-top: 80px;
    margin-bottom: 80px;
    max-width: 90vw;
    margin-left: auto;
    margin-right: auto;;
    gap: 100px;
}


.card__text {
    display: flex;
    flex-direction: column;
    gap: 40px;
}

h1.card__title {
    font-size: 48px;
    font-weight: normal;
}

.card__description {
    font-size: 24px;
    font-weight: lighter;
}

.card__soho {
    display: flex;
    margin-top: 80px;
    margin-bottom: 240px;
    max-width: 90vw;
    margin-left: auto;
    margin-right: auto;
    gap: 100px;
}

.card__img-home img{
    height: auto;
    width: 600px;
}

.main__footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    padding-top: 40px;
    padding-bottom: 40px;
    background: #DCDCDC;
    min-width: 100%;
}

.main__footer ul {
    list-style: none;
    display: flex;
    flex-direction: row;
    gap: 80px;
    font-size: 20px;
}

.main__footer a {
    text-decoration: none;
    color: black;
}

.main__footer a:hover {
    text-decoration: underline;
}

.card__collection {
    display: flex;
    flex-direction: column;
    margin-top: 140px;
    gap: 40px;
    max-width: 100vw;
    margin-bottom: 80px;
    margin-left: 60px;
    margin-right: 60px;
}

h1.card__collection-title {
    font-size: 48px;
    font-weight: normal;
    text-align: center;
}

p.card__collection-description {
   font-size: 20px;
    font-weight: lighter;
    text-align: center;
}

.gallery {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-left: auto;
    margin-right: auto;
    flex-wrap: wrap;
}

.gallery img {
    height: auto;
    width: auto;
}

.product-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(6, 1fr);
    margin-top: 80px;
    max-width: 90vw;
    margin-left: auto;
    margin-right: auto;
    gap: 40px;
    margin-bottom: 400px;
}

.card__product {
    display: flex;
    gap: 20px;
}

.card__product img {
    height: auto;
    width: 100%;
}

.card__product-text {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-top: 40px;
}

h1.card__product-title {
    font-size: 32px;
    font-weight: normal;
    text-align: center;
}

p.card__product-price {
    font-size: 18px;
    font-weight: lighter;
    text-align: center;
}

p.card__product-description {
    font-size: 16px;
    font-weight: lighter;
    text-align: center;
}

.contact__title {
    display: flex;
    justify-content: center;
    margin-top: 140px;
}

h1.contact__title {
    font-size: 48px;
    font-weight: normal;
}

.card__contact {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-top: 80px;
    margin-bottom: 50vw;
}

.contact-form {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 650px;
    height: 420px;
    background-color: white;
    padding: 16px;
    gap: 10px;
}

.card__img img {
    width: 650px;
    height: 420px;
}

.contact-form input[type=text], .contact-form textarea {
    width: 100%;
    height: 40px;
    padding-left: 10px;
    border: #DCDCDC 1px solid;
    outline: none;
    border-radius: 5px;
}

#message {
    height: 75px;
    padding-top: 10px;
}

#submit__btn {
    background: black;
    color: #F4F3F3;
    height: 40px;
    border: none;
    border-radius: 5px;
}

.flex-wrap {
    display: flex;
    justify-content: center;
}

.sort__options {
    margin-top: 40px;
    display: flex;
    justify-content: flex-end;
    margin-right: 5vw;
    gap: 10px;
}

/*Home Page Mobile*/
@media screen and (max-width: 809px) {
    .header__logo a{
        display: flex;
        font-size: 20px;
    }

    .header__links a{
        font-size: 12px;
    }

    .hero{
        height: 300px;
        margin-top: 100px;
    }

    .hero__action {
        text-align: center;
        margin-top: 150px;
        font-size: 32px;
        height: 80px;
    }

    .card__model {
        flex-direction: column-reverse;
    }

    .card__text {
        text-align: center;
    }

    h1.card__title {
        font-size: 24px;
    }

    p.card__description {
        font-size: 16px;
    }

    .card__soho {
        flex-direction: column;
    }

    .card__img-home {
        display: flex;
        justify-content: center;
    }

    .card__img-home img {
        object-fit: contain;
        width: 100%;
        margin-left: 10px;
        margin-right: 10px;
    }

    .main__footer li {
        font-size: 12px;
    }

    .main__footer ul {
        text-align: center;
        display: flex;
        flex-direction: row;
        justify-content: center;
        width: 80%;
        gap: 15px
    }

    .flex-wrap {
        margin-left: 20px;
        margin-right: 20px;

    }

    .card__collection {
        max-width: 100vw;
        margin-left: 0;
        margin-right: 0;
    }

    h1.card__collection-title {
        font-size: 24px;
        width: 100%;
    }

    p.card__collection-description {
        font-size: 12px;
        width: 100%;
    }

    .gallery {
        flex-wrap: wrap;
        max-width: 100vw;
        gap: 5px;
    }

    .gallery img {
        height: auto;
        width: 150px;
        object-fit: contain;
    }

    .product-grid {
        gap: 10px;
        max-width: 100vw;
    }

    .card__product {
        width: 100%;
        flex-direction: column;
    }

    .card__product img{
        width: 100%;
        height: auto;
    }

    h1.card__product-title {
        font-size: 18px;
    }

    p.card__product-price {
        font-size: 14px;
    }

    p.card__product-description {
        font-size: 12px;
    }

    .sm-hide {
        display: none;
    }

    h1.contact__title {
        font-size: 24px;
    }

    .card__contact {
        flex-wrap: wrap;
        margin-top: 40px;
        gap: 20px;
    }

    .card__img img {
        width: 100vw;
        height: 200px;
    }

    .card__contact-form form{
        width: 350px;
        height: 500px;
        font-size: 16px;
    }

    .card__contact-form label{
        font-size: 16px;
    }

    .sort__options {
        align-items: center;
    }

    .sort__options label {
        font-size: 14px;
    }

    .sort__options option{
        font-size: 14px;
    }
}

/*Home Page Tablet*/
@media screen and (max-width: 1399px) and (min-width: 810px) {
    .header__logo a{
        display: flex;
        font-size: 28px;
    }

    .header__links a{
        font-size: 14px;
    }

    .hero{
        height: 300px;
        margin-top: 140px;
    }

    .hero__action {
        text-align: center;
        margin-top: 150px;
        font-size: 46px;
        height: 90px;
    }

    .card__text {
        text-align: center;
    }

    h1.card__title {
        font-size: 28px;
    }

    p.card__description {
        font-size: 18px;
    }


    .card__img-home {
        display: flex;
        justify-content: center;
    }

    .card__img-home img {
        width: 400px;
    }

    .main__footer li{
        font-size: 14px;
    }

    .main__footer ul{
        gap: 20px
    }

    .flex-wrap {
        margin-left: 20px;
        margin-right: 20px;

    }

    .card__collection {
        max-width: 100vw;
        margin-left: 0;
        margin-right: 0;
    }

    h1.card__collection-title {
        font-size: 32px;
        width: 100%;
    }

    p.card__collection-description {
        font-size: 16px;
        width: 100%;
    }

    .gallery {
        max-width: 100vw;
    }

    .gallery img {
        height: auto;
        width: 200px;
    }

    .product-grid {
        gap: 10px;
        max-width: 100vw;
    }

    .card__product {
        width: 100%;
        gap: 15px;
    }

    .card__product-text {
        width: 85%
    }


    .card__product img{
        object-fit: contain;
        width: 200px;
        height: auto;
    }

    h1.card__product-title {
        font-size: 20px;
    }

    p.card__product-price {
        font-size: 16px;
    }

    p.card__product-description {
        font-size: 14px;
    }

    .sm-hide {
        display: none;
    }

    h1.contact__title {
        font-size: 32px;
    }

    .card__contact img{
        margin-top: 20px;
    }
}

@media screen and (max-width: 1299px) and (min-width: 810px) {
    .card__contact {
        flex-wrap: wrap;
        margin-top: 20px;
        justify-content: center;
        gap: 40px;
    }

    .card__img img {
        width: 100vw;
        height: 400px;
    }
}

